Creadas los componentes de las páginas y su enrutamiento con el componente Header
